force-app/main/default/objects/Contact/fields/Communication_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preferences__c</fullName>
    <description>The contact&apos;s preferred channels for receiving communications from the business.</description>
    <label>Communication Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>