force-app/main/default/objects/Contact/fields/First_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Request__c</fullName>
    <description>The date the contact first requested an order. Used to track the start of the customer journey.</description>
    <label>First Order Request</label>
    <type>Date</type>
</CustomField>