force-app/main/default/objects/Contact/fields/Last_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Request__c</fullName>
    <description>Date of the contact&apos;s most recent order request.</description>
    <label>Last Order Request</label>
    <type>Date</type>
</CustomField>