force-app/main/default/objects/Contact/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the contact has given consent to receive marketing communications.</description>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>