force-app/main/default/objects/Contact/fields/Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Date__c</fullName>
    <description>The date the contact gave consent to receive marketing communications.</description>
    <label>Opt In Date</label>
    <type>Date</type>
</CustomField>