force-app/main/default/objects/Contact/fields/Preference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Preference_Notes__c</fullName>
    <label>Preference Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Free-text notes about the contact&apos;s product or service preferences, special requests or relevant personal details.</description>
</CustomField>