force-app/main/default/objects/Contact/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <description>Indicates the product categories the contact is interested in or has previously purchased.</description>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Baby Cosmetics</fullName>
            </value>
            <value>
                <fullName>Gels</fullName>
            </value>
            <value>
                <fullName>Shampoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>